Prepared Data for Tableau

--- a/analysis/milestone2.ipynb
+++ b/analysis/milestone2.ipynb
@@ -607,6 +607,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### This is for future Tableau processing\n",
+    "\n",
+    "### This data frame contains all the questions we care about that way we will have cleaned up data in Tableau\n",
+    "### All the data clean up was already done in script/loading_functions\n",
+    "df20 = df[['id', 'gender', 'race', 'educ', 'i_c', 'v_c', 'Q5', 'Q20', 'Q21', 'Q22', 'Q23', 'Q24', 'Q33', ]]\n",
+    "### Creates a cvs file with this new dataframe\n",
+    "df20.to_csv(r'../data/processed/processedData.cvs')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
