--- a/analysis/test.ipynb
+++ b/analysis/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,6 +650,20 @@
    "metadata": {},
    "source": [
     "It looks like people who plan to vote, who they plan on voting for and what partie they belong to is essentially asking the same question with different words."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### This is for future Tableau processing\n",
+    "\n",
+    "### This data frame contains all the questions we care about that way we will have cleaned up data in Tableau\n",
+    "### All the data clean up was already done in script/loading_functions\n",
+    "df20 = df[['RespId', 'gender', 'race', 'educ', 'income_cat', 'voter_category', 'Q5', 'Q20', 'Q21', 'Q22', 'Q23', 'Q24', 'Q33', ]]\n",
+    "df.to_csv(r'../data/processed/processedData.cvs')"
    ]
   },
   {
